@@ -43,33 +43,58 @@ sub runtests {
 
     # @rrs is exported from t::TestData
     foreach my $data (@rrs) {
-	$data->{'name'}="foo.example.com";
+	# pause a moment
+	select(undef, undef, undef, 0.1);
+
+	$data->{'name'}="foo.example.com.";
+	# special casing for SOA, that must be zone-apex
+	$data->{'name'}="example.com" if ($data->{'type'} eq 'SOA');
+
+	# special casing for CNAME, may not have any data at the name
+	# foo.example.com has A and AAAA rrs
+	$data->{'name'}="alias.example.com" if ($data->{'type'} eq 'CNAME');
+
+	# special casing for NS, may not have any data at the name
+	$data->{'name'}="zonecut.example.com" if ($data->{'type'} eq 'NS');
+
+
+
+
 	$data->{'ttl'}=10;
-	
 	my $RR=Net::DNS::RR->new(
 	    %{$data});
-#	$data->{'name'}="example.com" if ($data->{'type'} eq 'SOA');
+
 	my $update = Net::DNS::Update->new('example.com');
-	# Prerequisite is that no type records exist for the name.
-	$update->push(pre => nxrrset($data->{'name'}."  ".$data->{'type'}));
-      	$update->push(update => rr_add($RR->string));
+	# Prerequisite is that no type records exist for the name. Again for some
+	# RRs we need special casing
+	unless ($data->{'type'} eq "SOA" ){
+	    $update->push(pre => nxrrset($data->{'name'}."  ".$data->{'type'}));
+	}else{
+	    $update->push(pre => yxrrset($data->{'name'}."  ".$data->{'type'}));
+	}
+	$update->push(update => rr_add($RR->string));
+
 	my $reply = $res->send($update);
 	# Did it work?
-	select(undef, undef, undef, 0.2);
+	my $updatesuccess=0;
 	SKIP: {
 	    skip 'Update failed: '.$res->errorstring, 1 unless $reply ;
+
 	    
-	    is ($reply->header->rcode, 'NOERROR', "Update succeeded for ".$data->{'type'}) ||
-	    		diag ('Update failed: ', $reply->header->rcode)
+	    $updatesuccess= is ($reply->header->rcode, 'NOERROR', "Update succeeded for ".$data->{'type'}) ;
+	    diag ('Update failed: ', $reply->header->rcode, " for: ".$RR->string) unless $updatesuccess;
+	    
+		
 	}
-	
 	my $query=Net::DNS::Packet->new($data->{'name'},$data->{'type'});
 	undef($reply);
 	$reply=$res->send($query);
 	#$reply->print;
 	my $ans=($reply->answer)[0];
-      SKIP: {
-	  skip "no answer returned ".$reply->header->rcode, 1 unless defined ($ans);
+	#special case for NS: delegation
+	$ans=($reply->authority)[0] if $data->{'type'} eq "NS";  
+      SKIP:{
+	  skip "no answer returned ". ($updatesuccess?"errorcode: ":"after failed update: ").$reply->header->rcode, 1 unless defined ($ans) && $updatesuccess ;
 	  is( $ans->string,$RR->string,"In and out match ". $data->{'type'});
 	}
 
@@ -89,7 +114,7 @@ sub runtests {
 	    $reply = $res->send($update);
 	    # Did it work?
 	  SKIP: {
-	      skip 'Update failed: '.$res->errorstring, 1 unless $reply ;
+	      skip  $updatesuccess?'Update failed: '.$res->errorstring:"Delete cannot succeed after a failed update" , 1 unless $reply && $updatesuccess ;
 	      
 	      is ($reply->header->rcode, 'NOERROR', "Delete succeeded for ".$data->{'type'}) ||
 		  diag ('Update failed: ', $reply->header->rcode)
@@ -112,7 +137,7 @@ BEGIN {
 		     127.53.53.8
 		     );
 
-    $numberoftests=2*@rrs-2;
+    $numberoftests=3*@rrs-2;
     
     if(
        eval {require IO::Socket;}
@@ -159,6 +184,8 @@ print NAMEDCONF <<ENDCONF;
 options {
    listen-on port 5334 { 127.53.53.8; };
    pid-file "t/named-pid";
+   recursion no;
+
 };
 
 
@@ -177,20 +204,26 @@ open(ZONEFILE,">t/example.com") || die "could not open t/example.com";
 
 print ZONEFILE <<ENDZONE;
 ;;; TESTZONE fot 12-TestUpdate.t
-example.com.   	60 IN	SOA ns.example.com. olaf.cpan.org. (
-				2400002975 ; serial
-				450        ; refresh (7 minutes 30 seconds)
-				30         ; retry (30 seconds)
-				345600     ; expire (4 days)
-				600        ; minimum (10 minutes)
+
+\$TTL 60
+example.com.   	 IN	SOA ns.example.com. olaf.cpan.org. (
+                                1 ; serial
+				100        ; refresh (7 minutes 30 seconds)
+				50         ; retry (30 seconds)
+				500     ; expire (4 days)
+				10        ; minimum (10 minutes)
 				)
 
 
 
-example.com. 60 IN NS ns.example.com.
-ns.example.com.  60 IN A 127.53.53.8
+example.com.  IN NS ns.example.com.
+ns.example.com.   IN A 127.53.53.8
 
-mx-exchange.example.com.  60 IN A 127.53.53.8
+cut.example.com.  IN NS ns.example.net.
+ns.example.net. IN A 10.6.6.6
+
+
+mx-exchange.example.com.   IN A 127.53.53.8
 
 
 ENDZONE
@@ -200,9 +233,9 @@ my $pid;
 
 die "Can't fork: $!" unless defined($pid = fork);
 if ($pid) {           # parent
-    sleep 2;
+    select(undef, undef, undef, 0.5);
+
     runtests();
-    print "PId $pid\n";
     kill 2, $pid;
 
 } else {
